Fix logo squashing

--- a/_sass/adaptivity.scss
+++ b/_sass/adaptivity.scss
@@ -177,10 +177,10 @@
 		margin-bottom: 8px;
 	}
 
-	.header-logo_img {
+	.header-logo-img {
 		margin-top: 15px;
 		margin-right: 5px;
-		max-height: 48px;
+		height: 62px;
 	}
 
 	.info-card-title {
