--- a/_sass/layouts.scss
+++ b/_sass/layouts.scss
@@ -17,6 +17,7 @@
 	display: inline;
 	max-height: 68px;
 	width: auto;
+	min-width: min-content;
 	margin-top: 8px;
 	margin-bottom: 5px;
 }
